# atlas

./: .gitignore  .tool-versions  README.md  mix.exs
apps/atlas/: .formatter.exs  mix.exs
apps/atlas/lib/: atlas.ex
apps/atlas/lib/atlas/: application.ex  library.ex  locations.ex  maintenance.ex  repo.ex
apps/atlas/test/atlas/: gc_test.exs  ignore_integration_test.exs  index_mode_test.exs  (+2 more)
apps/atlas_web/: .gitignore  README.md  mix.exs
apps/atlas_web/lib/: atlas_web.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: atlas.ex
lib/atlas/: application.ex  cli.ex  gc.ex  native.ex  repo.ex
lib/atlas/domain/: event.ex  hash.ex
lib/atlas/indexer/: supervisor.ex  walker.ex
lib/atlas/log/: log.ex  notifier.ex
lib/atlas/projection/: projector.ex  supervisor.ex
lib/atlas/schemas/: chunk.ex  file.ex  location.ex  projection_state.ex
lib/atlas/store/: local_fs.ex  store.ex
lib/atlas/watcher/: watcher.ex
lib/mix/tasks/: atlas.find.ex  atlas.gc.ex  atlas.locations.ex  atlas.ls.ex  atlas.rebuild_projection.ex  atlas.unwatch.ex
native/atlas_native/: Cargo.toml  README.md
native/atlas_native/.cargo/: config.toml
native/atlas_native/src/: chunking.rs
priv/repo/migrations/: 20260420000001_create_projection_tables.exs  20260421000001_create_locations_table.exs
test/: atlas_test.exs  test_helper.exs
test/atlas/: gc_test.exs  locations_scan_test.exs  locations_test.exs  native_test.exs
test/atlas/domain/: chunk_test.exs  hash_test.exs
test/atlas/native/: streaming_test.exs
test/atlas/watcher/: watcher_test.exs
(+45 files in other folders)
